Update social images

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "0xcert-www",
+  "name": "nf-alliance-www",
   "version": "1.0.0",
-  "description": "The official 0xcert public website.",
+  "description": "The official nf-alliance public website.",
   "author": "David Ličen <david.licen@0xcert.org>, Kristijan Sedlak <kristijan@0xcert.org>",
   "private": true,
   "scripts": {
@@ -11,13 +11,12 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "whitepaper:download": "wget -q https://github.com/0xcert/whitepaper/raw/master/dist/0xcert-protocol-technical-paper.pdf -O ./static/technical-paper.pdf",
     "deploy:staging": "infra/bin/deploy",
     "deploy:production": "infra/bin/deploy production"
   },
   "dependencies": {
     "@nuxtjs/google-tag-manager": "^1.1.0",
-    "nuxt": "^1.4.0",
+    "nuxt": "^1.4.2",
     "nuxt-sass-resources-loader": "^2.0.0",
     "vue-cookie-law": "^1.6.0",
     "vue-social-sharing": "^2.3.3"
@@ -25,7 +24,7 @@
   "devDependencies": {
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/feed": "^0.1.1",
-    "@nuxtjs/markdownit": "^1.2.0",
+    "@nuxtjs/markdownit": "^1.2.2",
     "@nuxtjs/workbox": "^2.2.0",
     "babel-eslint": "^8.2.1",
     "css-loader": "^1.0.0",
@@ -42,8 +41,7 @@
     "sass-loader": "^7.1.0",
     "v-lazy-image": "^1.2.2",
     "vee-validate": "^2.0.9",
-    "vue-intercom": "^1.0.12",
     "vue-scrollto": "^2.11.0",
-    "vue-svg-loader": "^0.5.0"
+    "vue-svg-loader": "^0.11.0"
   }
 }
