Fix the code on save

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,13 @@
 {
+  "eslint.validate": [{
+      "language": "vue",
+      "autoFix": true
+    },
+    {
+      "language": "html",
+      "autoFix": true
+    }
+  ],
   "include": [
     "./**/*"
   ]
