--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/workbox": "^2.2.0",
     "babel-eslint": "^8.2.6",
     "css-loader": "^1.0.0",
+    "dotenv": "^6.2.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
