--- a/package.json
+++ b/package.json
@@ -15,35 +15,34 @@
     "deploy:production": "infra/bin/deploy production"
   },
   "dependencies": {
-    "@nuxtjs/google-tag-manager": "^1.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "nuxt": "^1.4.2",
-    "nuxt-sass-resources-loader": "^2.0.0",
-    "vue-cookie-law": "^1.6.0",
+    "@nuxtjs/google-tag-manager": "^2.1.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "nuxt": "^2.3.4",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "vue-cookie-law": "^1.8.0",
     "vue-social-sharing": "^2.3.3"
   },
   "devDependencies": {
-    "@nuxtjs/axios": "^5.3.1",
-    "@nuxtjs/feed": "^0.1.1",
-    "@nuxtjs/markdownit": "^1.2.2",
-    "@nuxtjs/workbox": "^2.2.0",
-    "babel-eslint": "^8.2.6",
-    "css-loader": "^1.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/feed": "^0.2.0",
+    "@nuxtjs/markdownit": "^1.2.3",
+    "@nuxtjs/workbox": "^2.6.0",
+    "babel-eslint": "^10.0.1",
+    "css-loader": "^2.1.0",
     "dotenv": "^6.2.0",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.3.0",
-    "foundation-sites": "^6.4.4-rc1",
-    "markdown-it-attrs": "^1.2.1",
+    "eslint": "^5.11.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.1.0",
+    "foundation-sites": "^6.5.1",
+    "markdown-it-attrs": "^2.3.2",
     "markdown-it-block-embed": "0.0.3",
     "markdown-it-container": "^2.0.0",
-    "node-sass": "^4.9.4",
-    "nuxt-mq": "^1.1.2",
+    "node-sass": "^4.11.0",
+    "nuxt-mq": "^1.1.3",
     "sass-loader": "^7.1.0",
     "v-lazy-image": "^1.2.2",
-    "vee-validate": "^2.0.9",
-    "vue-scrollto": "^2.11.0",
-    "vue-svg-loader": "^0.11.0"
+    "vee-validate": "^2.1.5",
+    "vue-scrollto": "^2.13.0"
   }
 }
