Update CoinGecko cryptocurrency report
Updated link to the 2018 Annual report, fixed some branding for NonFungible.com

--- a/static/data/resources.yml
+++ b/static/data/resources.yml
@@ -485,12 +485,12 @@
   tag:
   - physical asset
 
-- link: http://bit.ly/coingeckoQ32018
-  description: Cryptocurrency Q3 2018 Report featuring NFT by Non-Fungibles.com
+- link: https://bit.ly/2S4UnDM
+  description: Cryptocurrency 2018 Annual CryptoCurrency Report featuring NFT by NonFungible.com
   tag:
   - resources
 
-- link: Nonfungible.com
+- link: NonFungible.com
   description: NFT Market Data
   tag:
   - resources
