Update partners file

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -2,255 +2,1020 @@
 - name: ""
   description: ""
   logo: "block-base.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "blockade-games.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "blockchain-slovakia.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "coin-kred.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-baseball.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-space-commander.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "dcl-plazas.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "lucid-sight.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "neon-district.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "nft-nyc.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "unik-name.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "artchain.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "bitski.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "cryptage-origins.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-motors.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "cryptographics.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "dapp-radar.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "decenter.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "encrypted.jpg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "hyperbridge.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "mintable.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "phantasma.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "pixura.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "po8.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "streamers-connected.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "trade-stars.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "wetrust.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "bloch.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "block3.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "blockchaingamernet.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "coingecko.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "covalent.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-kaiju.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "cryptobeasties.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "cryptocrystal.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "cubego.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "d0x.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "decentralanddaily.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "divino.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "ecomi.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "ether-kingdom.jpg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "etheremon.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "farsight-podcast.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "horizon.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "iba.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "invented4.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "kauku.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "larva-labs.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "lumi-collect.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "matic.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "minting-coins.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "nifty-gateway.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "verified-collection.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "aave.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "auctionity.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "demystify.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "fuel-games.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "gods-unchained.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "0xgame.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "sorare.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "trg.jpg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "vault.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "webp.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "hyperdragons.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "block-rocket.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "blockchain-studios.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "codex.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "hashmark.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-carz.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "crypto-decks.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "dac.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "dapp.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "ember-sword.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "eth-town.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "kette.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "known-origin.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "mokens.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "non-fungible.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "opensea.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "su-squares.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "unico.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "doctrina.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "tokntok.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "socouch.png"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
 - name: ""
   description: ""
   logo: "0xcert.svg"
+  website: ""
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""
+  
