Add new partner Bobo

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1019,3 +1019,15 @@
   github: ""
   medium: ""
   
+- name: ""
+  description: ""
+  logo: "0xcert.svg"
+  website: "fjdshfkdsjfhds"
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
+  medium: ""  
+  
