Add new partner Testni

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1029,5 +1029,17 @@
   reddit: ""
   discord: ""
   github: ""
+  medium: ""
+  
+  - name: "testni"
+  description: ""
+  logo: "Testni.svg"
+  website: "fjdshfkdsjfhds"
+  facebook: ""
+  linkedin: ""
+  twitter: ""
+  reddit: ""
+  discord: ""
+  github: ""
   medium: ""  
   
