--- a/package.json
+++ b/package.json
@@ -10,31 +10,28 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
-    "deploy:staging": "infra/bin/deploy",
-    "deploy:production": "infra/bin/deploy production"
+    "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/google-tag-manager": "^2.1.1",
+    "@nuxtjs/google-tag-manager": "^2.1.4",
     "eslint-plugin-prettier": "^3.0.1",
-    "nuxt": "^2.3.4",
-    "nuxt-sass-resources-loader": "^2.0.5",
-    "vue-cookie-law": "^1.8.0",
-    "vue-social-sharing": "^2.3.3"
+    "nuxt": "^2.4.5",
+    "vue-cookie-law": "^1.9.0",
+    "vue-social-sharing": "^2.4.2"
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/feed": "^0.2.0",
     "@nuxtjs/markdownit": "^1.2.3",
+    "@nuxtjs/style-resources": "^0.1.2",
     "@nuxtjs/workbox": "^2.6.0",
     "babel-eslint": "^10.0.1",
     "css-loader": "^2.1.0",
-    "dotenv": "^6.2.0",
-    "eslint": "^5.11.1",
+    "eslint": "^5.14.1",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.1.0",
-    "foundation-sites": "^6.5.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-vue": "^5.2.2",
+    "foundation-sites": "^6.5.3",
     "js-yaml-loader": "^1.0.1",
     "markdown-it-attrs": "^2.3.2",
     "markdown-it-block-embed": "0.0.3",
@@ -42,8 +39,8 @@
     "node-sass": "^4.11.0",
     "nuxt-mq": "^1.1.3",
     "sass-loader": "^7.1.0",
-    "v-lazy-image": "^1.2.2",
-    "vee-validate": "^2.1.5",
+    "v-lazy-image": "^1.3.2",
+    "vee-validate": "^2.1.7",
     "vue-scrollto": "^2.13.0"
   }
 }
