Changed website of Finturi

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -881,7 +881,7 @@
 	    
 -   name: "Finturi"
     status: won
-    website: "https://ethereum-japan.jp"
+    website: "https://www.finturi.com/"
     description: "Finturi is a Dutch startup that brings to the market - a new way of invoice financing. Finturi connects businesses with financiers and helps businesses borrow money against invoices. It provides Financiers with a platform where they can lend money to businesses and earn honest returns in short term. Finturi uses technologies like blockchain, artificial intelligence and machine learning to make invoice financing secure, low-cost, quick and easy."
     twitter: "https://twitter.com/Finturibv"
     facebook:  
