Fix name spelling for GO!WALLET

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -890,10 +890,10 @@
     medium: "https://medium.com/@finturi"
     logo: finturi.png
 
--   name: "Go Wallet"
+-   name: "GO!WALLET"
     status: won
     website: "https://www.go-wallet.app"
-    description: "GO! WALLET is a revolutionary application that you can enjoy block chain games such as My crypto Heroes, DApps app, manage Ethereum tokens, participate in ICO only with smartphones."
+    description: "GO!WALLET is a revolutionary application that you can enjoy block chain games such as My crypto Heroes, DApps app, manage Ethereum tokens, participate in ICO only with smartphones."
     twitter: "https://twitter.com/gowallet_app_"
     facebook:  
     github: 
