--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -976,4 +976,4 @@
     twitter: "https://twitter.com/@hoardexchange"
     facebook: "https://www.facebook.com/hoardexchange" 
     medium: "https://blog.hoard.exchange/"
-    logo: mergecommit.svg
+    logo: hoard.png
