--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -342,7 +342,7 @@
 -   name: "DiVinoVineyards.com"
     status: won
     website: "DiVinoVineyards.com"
-    description: "Coming soon"
+    description: "DivinoVineyard will be initially based in Decentraland. Utilizing VR, visitors to the winery will socialize, purchase and trade rare digital wines NTFs  which will be backed in real-life with real wine!"
     twitter:
     facebook:
     github: 
