--- a/static/data/resources.yml
+++ b/static/data/resources.yml
@@ -657,3 +657,8 @@
   description: Enjin token minter
   tag:
   - wallet
+
+- link: https://idafestival.com
+  description: International Digital Art Festival
+  tag:
+  - event
