--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -971,9 +971,17 @@
     
 -   name: "Hoard"
     status: won
-    website: "http://www.hoard.exchange/"
+    website: "http://www.hoard.exchange"
     description: "Hoard is about to change the future of the video gaming industry by facilitating True Ownership of game assets on the blockchain. Hoard’s platform offers a unique value-proposition to game makers and gamers alike; enabling real-world economies in games with true-ownership of virtual items, game-interoperability and new models of financing for the development of games."
     twitter: "https://twitter.com/@hoardexchange"
     facebook: "https://www.facebook.com/hoardexchange" 
     medium: "https://blog.hoard.exchange/"
     logo: hoard.png
+
+-   name: "iDAF"
+    status: won
+    website: "https://idafestival.com"
+    description: "This immersive event will showcase the very best in VR,AR, rare digital art, NFTs & blockchain technology from the worlds most respected artists, platforms & innovators."
+    twitter: "https://twitter.com/IdafMcr"
+    logo: idaf.jpg
+    
