Update partners and ignore file

--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -987,8 +987,8 @@
     
 -   name: "Tercet Network"
     status: won
-    website: "http://tercet.network/"
+    website: "https://tercet.network/"
     description: "Tercet Network is an incentivised ads and game monetization platform. We incentivise gamers with both TCNX and Non-fungible token for intracting with in-game ads. Creating a far superior gaming experience for gamers and higher monetization for publishers."
-    twitter: "http://twitter.com/TercetN"
-    telegram: "http://t.me/TercetN"
+    twitter: "https://twitter.com/TercetN"
+    telegram: "https://t.me/TercetN"
     logo: tercet.png
