--- a/static/data/resources.yml
+++ b/static/data/resources.yml
@@ -662,3 +662,9 @@
   description: International Digital Art Festival
   tag:
   - event
+
+- link: https://cryptantcrab.io
+  description: CryptantCrab
+  tag:
+  - game
+  - collectible
