--- a/static/data/resources.yml
+++ b/static/data/resources.yml
@@ -663,7 +663,7 @@
   tag:
   - event
 
-- link: https://cryptantcrab.io
+- link: https://www.cryptantcrab.io
   description: CryptantCrab
   tag:
   - game
