--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1029,3 +1029,16 @@
     github: "https://github.com/Arianee"
     instagram: "https://www.instagram.com/arianee_project/?hl=en"
     logo: arianee.svg
+
+-   name: "Skullys"
+    status: won
+    website: "https://skullys.co"
+    description: "Skullys, are a curated line of collectible ghost pirate skulls paying homage to the Golden Age of Piracy in the Caribbean.  They are reward-based digital collectibles with a location-based service (LBS) feature, allowing its owners the opportunity to perform geo-flagging tasks in order to earn treasure in the form of PO8 tokens. PO8 tokens can be redeemed for additional booster accessories to unlock new powers, increasing the earning potential of each individual Skully."
+    twitter: "https://twitter.com/cryptoskullys"
+    facebook: "https://www.facebook.com/cryptoskullys"
+    telegram: "https://t.me/cryptoskullys"
+    discord: "https://discord.gg/eFNZNCD"
+    instagram: "https://www.instagram.com/cryptoskullys"
+    logo: skullys.png
+    
+    
