--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1049,3 +1049,10 @@
     twitter: "https://twitter.com/Kred"
     facebook: "https://www.facebook.com/dotKred/?__tn__=%2Cd%2CP-R&eid=ARCA3HA3dQ8f1FBXb7A4eEtsYwW98bHsXjBpmsD1E3lagNp4-M7SgtUfx0bzZtzqAAhI7LE8rG2mns-p"
     logo: nftkred.svg
+    
+-   name: "DigiTix.io"
+    status: won
+    website: "http://digitix.io"
+    description: "DigiTix.io is an event ticketing platform powered by Ethereum with the purpose of reducing ticket scamming and price gouging scalpers while increasing transparency in the industry. These NFT tickets become digital assets that can be collected and programmed into the new digital ecosystem including AR and VR."
+    facebook: "https://www.facebook.com/digitix.io"
+    logo: digitix.png
