--- a/static/data/partners.yaml
+++ b/static/data/partners.yaml
@@ -1068,3 +1068,11 @@
     youtube: "https://www.youtube.com/channel/UCiHGZz2gt1a0okR5_lwrtNQ"
     telegram: "https://t.me/egamersio"
     logo: egamers.png
+
+-   name: "Wildcards"
+    status: won
+    website: "https://wildcards.world"
+    description: "Wildcards lets you support conservation, become a patron of animals and even earn a profit from trading your digital crypto collectable. All wildcards (NFT's) are ALWAYS for sale - yes you heard right :D Check it out!"
+    twitter: "https://twitter.com/wildcards_world"
+    telegram: "https://t.me/wildcardsworld"
+    logo: wildcards.png
